# LlamaTrain

./: .gitignore  pyproject.toml
.devcontainer/: DockerFile  devcontainer.json
data/alpaca_small/: state.json
models/llama-7b/: config.json  generation_config.json
src/: train.py
