[tool.poetry]
name = "llama-qlora"
version = "0.1.0"
description = ""
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = { version = "*", source = "torch-cu121" }
transformers = "^4.37.2"
datasets = "^2.19.0"
peft = "^0.9.0"
accelerate = "^0.27.2"
bitsandbytes = "^0.43.1"
scipy = "^1.12.0"

[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
